# fullrstack

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json
config/: default.toml  test.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/examples/: Cargo.toml
crates/server/: Cargo.toml
crates/server/benches/: load_test.rs
crates/server/src/: db.rs  device_manager.rs  main.rs
crates/server/tests/: integration_test.rs
crates/web/: Cargo.toml  index.html
crates/web/assets/: styles.css
crates/web/src/: main.rs
crates/web/tests/: web.rs
deployment/: nginx.conf
examples/: test_client.rs
