[package]
name = "fullrstack-examples"
version.workspace = true
edition.workspace = true

[[bin]]
name = "test_client"
path = "src/test_client.rs"

[dependencies]
fullrstack-common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
url = "2.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 