[package]
name = "fullrstack-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fullrstack-server"
path = "src/main.rs"

[dependencies]
fullrstack-common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
async-tungstenite = { version = "0.23", features = ["tokio-runtime"] }
url = "2.4"
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2.6", features = ["derive"] } 