[package]
name = "fullrstack-web"
version.workspace = true
edition.workspace = true

[dependencies]
fullrstack-common = { path = "../common" }
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_log = "1.0"
log = "0.4"
gloo-net = "0.4"
js-sys = "0.3"
time = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["WebSocket"] } 